TestSuite/PascalABCTests/errors/err0193.pas
uses System;

type 
[Console]
MyClassAttr = class
a : integer;
public fA : string;
public property Prop : integer read a write a;
end;


begin
  
end.